- Updated to portal 1.2.1 for database version 2 - Added server last startup - Added server last shutdown - Added server current uptime - Added formatting for distance - Fixed Suffocation deaths not showing properly on portal - Fixed player_list page no longer able to click next on list when you reach end of list - Bolded the stats values

--- a/statistician.css
+++ b/statistician.css
@@ -122,8 +122,9 @@ td {
 }
 
 #info {
+	font-weight: bold;
     margin-left: 2px;
-    font-size: 15px;
+    font-size: 12px;
     font-style: italic;
     margin-right: 8px;
 }
